# Pulse

./: .gitignore  Makefile  README.md
Pulse/apps/worker/: pyproject.toml
Pulse/apps/worker/worker/: db.py  settings.py
Pulse/apps/worker/worker/connectors/: x.py
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_init_placeholder.py  0002_destinations_and_post_drafts.py
apps/api/app/: db.py  deps.py  main.py  models.py  schemas.py  settings.py
apps/api/app/auth/: admin_auth.py  tokens_crypto.py
apps/api/app/connectors/: base.py  facebook.py  x.py
apps/api/app/routers/: accounts.py  automation.py  destinations.py  drafts.py  events.py  health.py  projects.py  queue.py  signals.py  templates.py
apps/api/app/services/: automation_policy.py  cadence.py  catalog.py  content_bank.py  context_drafts.py  draft_queue.py  moderation.py  post_builder.py  scheduler.py  utm.py
apps/web/: .env.example  README.md  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  (+4 more)
apps/worker/: .env.example  .envrc  README.md  oauth_pkce_local.py  pyproject.toml
apps/worker/worker/: automation.py  db.py  dispatcher.py  main.py  retry.py  settings.py
docs/: architecture.md  platform-policy-notes.md  pulse-builder-roadmap.md  runbook-deploy.md  runbook-incident.md
ops/nginx/: api.pulse.tokentap.ca.conf  pulse.tokentap.ca.conf
ops/scripts/: backup-before-overwrite.sh  deploy.sh  restart-all.sh
ops/systemd/: pulse-api.service  pulse-web.service  pulse-worker.service
(+43 files in other folders)
