[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic-settings>=2.8.1",
  "alembic>=1.14.1",
  "cryptography>=44.0.0",
  "python-dotenv>=1.2.1",
  "httpx>=0.28.1",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
