[project]
name = "pulse-worker"
version = "0.1.0"
description = "Pulse queue worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.38",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.2.1",
  "httpx>=0.28.1",
  "cryptography>=44.0.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]